refactor: Add the id field to make the tests pass.